# photoroom

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  developadjustmentengine.cpp  developadjustmentengine.h  developtypes.cpp  developtypes.h  draggablelineedit.cpp  draggablelineedit.h  exportdialog.cpp  exportdialog.h  histogramtypes.h  histogramwidget.cpp  histogramwidget.h  imageadjustments.h  imagelabel.cpp  imagelabel.h  imageloader.cpp  imageloader.h  imageprocessor.cpp  imageprocessor.h  importpreviewdialog.cpp  importpreviewdialog.h  importpreviewdialog.ui  jobmanager.cpp  jobmanager.h  jobspanel.cpp  jobspanel.h  jobswindow.cpp  jobswindow.h  libraryfilterpane.cpp  libraryfilterpane.h  librarygridview.cpp  librarygridview.h  librarymanager.cpp  librarymanager.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  (+5 more)
